# axiom

./: .claudeignore  .env.example  .gitignore  .gitleaks.toml  404.html  AXIOM_RELEASE_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile.node  Containerfile.server  HANDOVER.md  LEGAL-COMPLIANCE.md  LEGAL.md  LICENSE  MoP.code-workspace  NEXT_SESSION.md  ONBOARDING.md  PROGRESS_HANDOVER.md  PROJECT_axiom_2026-03-19_220305861Z.md  README.md  TOOLING.md  TestDockerfile  compose.server.yaml  deploy_remote_speedy.ps1  deploy_speedy_mini.py  generate_certs.py  get_token.py  index.html  inspect_cert.py  install_server.ps1  install_server.sh  jobs.db  mounts.json  node-compose.yaml  node_licence_audit.md  pyproject.toml  python_licence_audit.md  remote_deploy.py  (+8 more)
.agent/: README.md  (+3 more)
puppeteer/: .env.example  Containerfile.server  alembic.ini  bootstrap_admin.py  compose.cold-start.yaml  compose.ee.yaml  compose.server.yaml  demo_signing_key.pem  demo_verification_key.pem  entrypoint.py  entrypoint.sh  gen_token.py  migration.sql  migration_v10.sql  migration_v11.sql  migration_v13.sql  migration_v14.sql  migration_v15.sql  migration_v16.sql  migration_v17.sql  migration_v18.sql  migration_v19.sql  migration_v20.sql  migration_v21.sql  migration_v22.sql  migration_v23.sql  migration_v24.sql  migration_v24_job_vault_secrets.sql  migration_v24_vault.sql  migration_v27.sql  migration_v28.sql  migration_v29.sql  migration_v30.sql  migration_v31.sql  migration_v32.sql  migration_v37.sql  migration_v38.sql  migration_v39.sql  migration_v40.sql  migration_v41.sql  (+17 more)
puppeteer/agent_service/: auth.py  db.py  deps.py  main.py  models.py  pki.py  security.py
puppeteer/cert-manager/: Caddyfile  Dockerfile  Dockerfile.lxc  entrypoint.sh
puppeteer/dashboard/: Containerfile  generate_screenshots.py  index.html  npm-audit-initial.json  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
puppeteer/ee/: __init__.py
puppeteer/installer/: deploy_server.sh  install_universal.ps1  install_universal.sh
puppeteer/mirror/: Caddyfile
(+2267 files in other folders)
