[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-sdk"
version = "1.0.0-alpha"
description = "Axiom: Secure Enterprise Automation & Orchestration"
license = "Apache-2.0"
authors = [
    { name = "Thomas", email = "thomas@example.com" }
]
dependencies = [
    "httpx",
    "cryptography",
    "pydantic",
    "python-jose[cryptography]"
]
requires-python = ">=3.10"

[project.scripts]
axiom-push = "mop_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mop_sdk*"]

[tool.pytest.ini_options]
pythonpath = ["puppeteer"]
asyncio_mode = "auto"
