[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-agent-sdk"
dynamic = ["version"]
description = "Axiom: Secure Enterprise Automation & Orchestration"
license = "Apache-2.0"
authors = [
    { name = "Thomas", email = "thomas@example.com" }
]
dependencies = [
    "httpx",
    "cryptography",
    "pydantic",
    "python-jose[cryptography]"
]
requires-python = ">=3.10"

[project.scripts]
axiom-push = "mop_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mop_sdk*"]

[tool.pytest.ini_options]
pythonpath = ["puppeteer"]
asyncio_mode = "auto"
testpaths = ["puppeteer/agent_service/tests"]
markers = [
    "ee_only: marks tests that require the axiom-ee package (skipped in CE)",
]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"
